Make sure we're using the max z-index. Some sites have really really high z-index values

--- a/src/css/info-bar.css
+++ b/src/css/info-bar.css
@@ -19,7 +19,7 @@
     text-align: center !important;
     top: 0 !important;
     width: 500px !important;
-    z-index: 99999999 !important;
+    z-index: 9999999999 !important;
 }
 
 .samburba-tothecomments-alert-info {
